test/onceCall1_6.slq

def main(){
	x:=H(0);
	y:=dup(x);
	f:=()⇒CNOT(x,y); /// error
	measure(x);
	return f();
}
